--- a/core/static/core/css/Dashboard.css
+++ b/core/static/core/css/Dashboard.css
@@ -708,7 +708,7 @@ body {
   font-size: 1.5rem;
   font-weight: b;
   line-height: 1.5;
-  color: rgb(39, 39, 255);
+  color: var(--blue);
   text-align: center;
   white-space: nowrap;
   background-color: #e9ecef;
